--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -74,6 +76,20 @@ dependencies {
 
         // optional - Test helpers for LiveData
         testImplementation "androidx.arch.core:core-testing:$arch_version"
+
+
+        //hilt
+
+
+        //Dagger - Hilt
+        implementation "com.google.dagger:hilt-android:2.40.5"
+        kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+        implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+        kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+        // Activity KTX for viewModels()
+        implementation "androidx.activity:activity-ktx:1.4.0"
     }
 
 }
