--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+unsplash_access_key="EwvkfdfMzdSru0kwd7h__lZOY9f4jx7369IUbCg0JNA"
